# obs-rs

./: Cargo.toml  build.sh  package.json  tsconfig.json
src/: lib.rs
src/rs/: mod.rs
src/rs/threading/: pool.rs
src/ts/components/containers/: MatcherComponent.tsx
src/ts/webWorkers/wasm/: ThreadTest.ts  WasmComlinkWorker.ts
