[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
fancy-regex = "0.10.0"
unicode-segmentation = "1.9.0"
thiserror = "1.0.31"
futures = "0.3.21"
wasm_thread = "0.2.0"
wasm-rs-async-executor = "0.9.0"

futures-channel-preview = "0.3.0-alpha.18"
wasm-bindgen = { version = "0.2.82", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.4.31"
console_error_panic_hook = "0.1"
js-sys = "0.3.58"
rayon = "1.1.0"
rayon-core = "1.5.0"

[dependencies.web-sys]
version = "0.3.23"
features = [
    'CanvasRenderingContext2d',
    'ErrorEvent',
    'Event',
    'ImageData',
    'Navigator',
    'Window',
    'Worker',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
]